@startuml

title US 105 - As an Administrator I want to add a new room to the house
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
  BorderColor indianred
  BackgroundColor indianred
  BackgroundColor Snow
   roundcorner 10
   ArrowFontName Verdana
   ArrowColor indianred
   ArrowFontColor darkslategrey
   FontSize 12
}

class HouseSettingsWebController
class RoomRepository
class Room
class RoomCrudRepository

HouseSettingsWebController -- RoomRepository: >
HouseSettingsWebController -- RoomDTO: >
RoomRepository -- RoomDTO : >
RoomRepository -- RoomCrudRepository : >
RoomRepository -- Room : >



class HouseSettingsWebController {
configureRoom(@RequestBody RoomDTO)
}

class RoomDTO {
areDimensionsValid()
getName()
getFloor()
getWidth()
getLength()
getHeight()
}

class Room{
setHouseFloor(int)
setRoomWidth(double)
setRoomLength(double)
setRoomHeight(double)
}

class RoomRepository {
configureRoom(RoomDTO)
}


class RoomCrudRepository{
findByRoomName(String)
save(Room)
}

@enduml